# chart-llm

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  FINDINGS.md  LICENSE  README.md  app.py  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/datasets/: movies.csv  movies.md  sales.csv  weather.csv  weather.md
benchmarks/queries/: movies_001.json  movies_002.json  movies_003.json  movies_004.json  movies_005.json  movies_006.json  movies_007.json  movies_008.json  sales_001.json  sales_002.json  sales_003.json  sales_004.json  sales_005.json  sales_006.json  sales_007.json  weather_001.json  weather_002.json  weather_003.json  weather_004.json  weather_005.json  weather_006.json  weather_007.json  weather_008.json
benchmarks/results/: FULL_REPORT_v1_corrected.md  SMOKE.md  SMOKE_8B.md  SMOKE_GEMINI.md
chart_llm/: __init__.py  cli.py
chart_llm/eval/: __init__.py  metrics.py  queries.py  report.py  runner.py  scoring.py
chart_llm/models/: __init__.py  _http.py  base.py  gemini.py  groq.py  ollama.py  registry.py
chart_llm/pipeline/: __init__.py  dataset.py  generate.py  retry.py
chart_llm/prompts/: __init__.py  feedback_template.txt  loader.py  system.txt  user_template.txt  vega_lite.py
chart_llm/rendering/: __init__.py  render.py
chart_llm/validation/: __init__.py  columns.py  data_ref.py  pipeline.py  render.py  schema.py  semantic.py  semantics.py  (+2 more)
tests/: conftest.py  test_datasets.py  test_eval.py  test_generate.py  test_models.py  test_pipeline.py  test_render.py  test_retry.py  test_validation.py
