[project]
name = "chart-llm"
version = "0.1.0"
description = "Natural-language → Vega-Lite chart generation with LLM validation loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "altair>=5.0",
    "vega>=4.0",
    "pandas>=2.0",
    "duckdb>=0.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jsonschema>=4.0",
    "typer[all]>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
chart-llm = "chart_llm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
